Fixed overflowing under 1024px givin main overflow: hidden

--- a/src/styles/_media_queries.scss
+++ b/src/styles/_media_queries.scss
@@ -1,4 +1,8 @@
 @media (max-width: 1024px) {
+    main {
+        overflow: hidden;
+    }
+    
     aside {
         width: 5vw;
     }
